src/gen/CoolParser.java
// Generated from D:/MyCompiler/src/main/grammar\Cool.g4 by ANTLR 4.8
package gen;

    import main.handler.Handler;
    import main.model.Variable;
    
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, PROGRAM=16, 
		MAIN=17, INTEGER_NAME=18, STRING_NAME=19, UNIT_NAME=20, VAR=21, PRINT=22, 
		LENGTH=23, RETURN=24, FUNCTION=25, FOR=26, WHILE=27, IF=28, ELSE=29, SYMB=30, 
		STRING=31, CHARACTER=32, INTEGER=33, WORD=34, WS=35;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_assigment = 2, RULE_typeVariable = 3, 
		RULE_typeFunction = 4, RULE_name = 5, RULE_value = 6, RULE_expression = 7, 
		RULE_relation = 8, RULE_statement = 9, RULE_ifStatement = 10, RULE_whileStatement = 11, 
		RULE_forStatement = 12, RULE_function = 13, RULE_functionCall = 14, RULE_parameters = 15, 
		RULE_parameter = 16, RULE_print = 17, RULE_length = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "assigment", "typeVariable", "typeFunction", 
			"name", "value", "expression", "relation", "statement", "ifStatement", 
			"whileStatement", "forStatement", "function", "functionCall", "parameters", 
			"parameter", "print", "length"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'()'", "'}'", "' = '", "';'", "'('", "')'", "'\"'", "'=='", 
			"'!='", "'<'", "'<='", "'>'", "'>='", "','", "'Program'", "'main'", "'Integer'", 
			"'String'", "'Unit'", "'var'", "'print'", "'length'", "'return'", "'function'", 
			"'for'", "'while'", "'if'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "PROGRAM", "MAIN", "INTEGER_NAME", "STRING_NAME", 
			"UNIT_NAME", "VAR", "PRINT", "LENGTH", "RETURN", "FUNCTION", "FOR", "WHILE", 
			"IF", "ELSE", "SYMB", "STRING", "CHARACTER", "INTEGER", "WORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cool.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private Handler handler = new Handler();
	    
	public CoolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public NameContext name;
		public TerminalNode PROGRAM() { return getToken(CoolParser.PROGRAM, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode FUNCTION() { return getToken(CoolParser.FUNCTION, 0); }
		public TerminalNode UNIT_NAME() { return getToken(CoolParser.UNIT_NAME, 0); }
		public TerminalNode MAIN() { return getToken(CoolParser.MAIN, 0); }
		public List<TerminalNode> WS() { return getTokens(CoolParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CoolParser.WS, i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<AssigmentContext> assigment() {
			return getRuleContexts(AssigmentContext.class);
		}
		public AssigmentContext assigment(int i) {
			return getRuleContext(AssigmentContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionCallContext> functionCall() {
			return getRuleContexts(FunctionCallContext.class);
		}
		public FunctionCallContext functionCall(int i) {
			return getRuleContext(FunctionCallContext.class,i);
		}
		public List<PrintContext> print() {
			return getRuleContexts(PrintContext.class);
		}
		public PrintContext print(int i) {
			return getRuleContext(PrintContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolVisitor ) return ((CoolVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(PROGRAM);
			setState(39);
			((ProgramContext)_localctx).name = name();
			handler.createResultFile((((ProgramContext)_localctx).name!=null?_input.getText(((ProgramContext)_localctx).name.start,((ProgramContext)_localctx).name.stop):null));
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(41);
				match(WS);
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(T__0);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(48);
				match(WS);
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(54);
					function();
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(60);
			match(FUNCTION);
			setState(61);
			match(UNIT_NAME);
			setState(62);
			match(MAIN);
			setState(63);
			match(T__1);
			setState(64);
			match(T__0);
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(71);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(65);
						declaration();
						}
						break;
					case 2:
						{
						setState(66);
						assigment();
						}
						break;
					case 3:
						{
						setState(67);
						expression();
						}
						break;
					case 4:
						{
						setState(68);
						statement();
						}
						break;
					case 5:
						{
						setState(69);
						functionCall();
						}
						break;
					case 6:
						{
						setState(70);
						print();
						}
						break;
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(76);
				match(WS);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(T__2);
			setState(83);
			match(T__2);
			handler.closeFile();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public NameContext name;
		public ValueContext value;
		public ExpressionContext expression;
		public FunctionCallContext functionCall;
		public LengthContext length;
		public TerminalNode VAR() { return getToken(CoolParser.VAR, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public LengthContext length() {
			return getRuleContext(LengthContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(CoolParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CoolParser.WS, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolVisitor ) return ((CoolVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(86);
				match(WS);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(VAR);
			setState(93);
			((DeclarationContext)_localctx).name = name();
			handler.addVariable(new Variable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null), handler.scope));
			setState(95);
			match(T__3);
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(96);
				((DeclarationContext)_localctx).value = value();
				setState(97);
				match(T__4);
				handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setValue(((DeclarationContext)_localctx).value.val);
				                             handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setType(((DeclarationContext)_localctx).value.type);
				}
				break;
			case 2:
				{
				setState(100);
				((DeclarationContext)_localctx).expression = expression();
				setState(101);
				match(T__4);
				handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setValue(((DeclarationContext)_localctx).expression.val);
				                             handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setType(((DeclarationContext)_localctx).expression.type);
				}
				break;
			case 3:
				{
				setState(104);
				((DeclarationContext)_localctx).functionCall = functionCall();
				handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setValue(((DeclarationContext)_localctx).functionCall.val);
				                             handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setType(((DeclarationContext)_localctx).functionCall.type);
				}
				break;
			case 4:
				{
				setState(107);
				((DeclarationContext)_localctx).length = length();
				setState(108);
				match(T__4);
				handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setValue(((DeclarationContext)_localctx).length.val);
				                             handler.getVariable((((DeclarationContext)_localctx).name!=null?_input.getText(((DeclarationContext)_localctx).name.start,((DeclarationContext)_localctx).name.stop):null)).setType("Integer");
				}
				break;
			}
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(113);
					match(WS);
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			handler.writeDeclaration(handler.scope);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssigmentContext extends ParserRuleContext {
		public NameContext name;
		public TypeVariableContext typeVariable;
		public ValueContext value;
		public ExpressionContext expression;
		public FunctionCallContext functionCall;
		public LengthContext length;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public LengthContext length() {
			return getRuleContext(LengthContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(CoolParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CoolParser.WS, i);
		}
		public TypeVariableContext typeVariable() {
			return getRuleContext(TypeVariableContext.class,0);
		}
		public AssigmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assigment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).enterAssigment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).exitAssigment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolVisitor ) return ((CoolVisitor<? extends T>)visitor).visitAssigment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssigmentContext assigment() throws RecognitionException {
		AssigmentContext _localctx = new AssigmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assigment);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(121);
				match(WS);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			((AssigmentContext)_localctx).name = name();
			setState(128);
			match(T__3);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(129);
				match(T__5);
				setState(130);
				((AssigmentContext)_localctx).typeVariable = typeVariable();
				setState(131);
				match(T__6);
				}
			}

			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(135);
				((AssigmentContext)_localctx).value = value();
				setState(136);
				match(T__4);
				handler.getVariable((((AssigmentContext)_localctx).name!=null?_input.getText(((AssigmentContext)_localctx).name.start,((AssigmentContext)_localctx).name.stop):null)).setValue(((AssigmentContext)_localctx).value.val);
				}
				break;
			case 2:
				{
				setState(139);
				((AssigmentContext)_localctx).expression = expression();
				setState(140);
				match(T__4);
				handler.getVariable((((AssigmentContext)_localctx).name!=null?_input.getText(((AssigmentContext)_localctx).name.start,((AssigmentContext)_localctx).name.stop):null)).setValue(((AssigmentContext)_localctx).expression.val);
				}
				break;
			case 3:
				{
				setState(143);
				((AssigmentContext)_localctx).functionCall = functionCall();
				handler.getVariable((((AssigmentContext)_localctx).name!=null?_input.getText(((AssigmentContext)_localctx).name.start,((AssigmentContext)_localctx).name.stop):null)).setValue(((AssigmentContext)_localctx).functionCall.val);
				}
				break;
			case 4:
				{
				setState(146);
				((AssigmentContext)_localctx).length = length();
				setState(147);
				match(T__4);
				handler.getVariable((((AssigmentContext)_localctx).name!=null?_input.getText(((AssigmentContext)_localctx).name.start,((AssigmentContext)_localctx).name.stop):null)).setValue(((AssigmentContext)_localctx).length.val);
				}
				break;
			}
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(152);
					match(WS);
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			handler.writeAssigment(handler.scope, (((AssigmentContext)_localctx).name!=null?_input.getText(((AssigmentContext)_localctx).name.start,((AssigmentContext)_localctx).name.stop):null), (((AssigmentContext)_localctx).typeVariable!=null?_input.getText(((AssigmentContext)_localctx).typeVariable.start,((AssigmentContext)_localctx).typeVariable.stop):null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeVariableContext extends ParserRuleContext {
		public TerminalNode INTEGER_NAME() { return getToken(CoolParser.INTEGER_NAME, 0); }
		public TerminalNode STRING_NAME() { return getToken(CoolParser.STRING_NAME, 0); }
		public TypeVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).enterTypeVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).exitTypeVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolVisitor ) return ((CoolVisitor<? extends T>)visitor).visitTypeVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeVariableContext typeVariable() throws RecognitionException {
		TypeVariableContext _localctx = new TypeVariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_la = _input.LA(1);
			if ( !(_la==INTEGER_NAME || _la==STRING_NAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeFunctionContext extends ParserRuleContext {
		public TerminalNode INTEGER_NAME() { return getToken(CoolParser.INTEGER_NAME, 0); }
		public TerminalNode STRING_NAME() { return getToken(CoolParser.STRING_NAME, 0); }
		public TerminalNode UNIT_NAME() { return getToken(CoolParser.UNIT_NAME, 0); }
		public TypeFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).enterTypeFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).exitTypeFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolVisitor ) return ((CoolVisitor<? extends T>)visitor).visitTypeFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeFunctionContext typeFunction() throws RecognitionException {
		TypeFunctionContext _localctx = new TypeFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_NAME) | (1L << STRING_NAME) | (1L << UNIT_NAME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CoolParser.STRING, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolListener ) ((CoolListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolVisitor ) return ((CoolVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
